[package]
name = "hashd"
version = "0.1.0"
authors = ["Hunter Trujillo <cryptoquick@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
sled = "0.18.1"
ring = "0.14.6"
byteorder = "1.3.1"
hex = "0.3.2"
bit-vec = "0.5.0"
dirs = "1.0.4"
indy-crypto = "0.5.1"
bip39 = "0.6.0-beta.1"

[dependencies.secp256k1]
version = "0.12.2"
features = ["serde"]
